@@ -180,7 +180,7 @@
                     <inplace>false</inplace>
                     <logLevel>INFO</logLevel>
                     <runTarget>http://localhost:7080/coregui/CoreGUI.html</runTarget>
-                    <extraJvmArgs>-Xmx512m</extraJvmArgs>
+                    <extraJvmArgs>-Xms1024M -Xmx1024M -XX:PermSize=256M -XX:MaxPermSize=256M</extraJvmArgs>
                     <localWorkers>2</localWorkers>
                     <draftCompile>true</draftCompile>
                     <buildOutputDirectory>target/gwtclasses</buildOutputDirectory>
